# jarn

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  JARN.md  LICENSE  README-TH.md  README.md  RELEASE.md  SECURITY.md  SPEC.md  demo.tape  fable-todo.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
action/: action.yml
contrib/: README.md  swebench_modal.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  EXTENDING.md  GITHUB_ACTION.md  OPEN_CORE.md  PERMISSIONS.md  README.md  ROADMAP.md  WEB_UI.md
docs/assets/: README.md
docs/specs/: 2026-07-06-mid-turn-steering-design.md  2026-07-07-windows-native-spike.md
docs/superpowers/specs/: 2026-06-17-competitive-gaps-design.md  2026-07-06-mid-turn-steering-design.md
evals/: README.md  baseline.json
evals/fixtures/add-missing-test/: eval.yaml
evals/fixtures/fix-failing-test/: eval.yaml
evals/fixtures/fix-off-by-one/: eval.yaml
evals/fixtures/implement-stub/: eval.yaml
examples/: README.md  mcp-filesystem.snippet.yaml  project.config.yaml
examples/agents/: test-writer.md
examples/commands/: explain.md  review.md
examples/github/: issue-fix.yml  pr-review.yml
examples/skills/: safe-refactor.md
npm/: build-packages.mjs
npm/jarn-cli/: README.md  package.json
npm/jarn-cli/test/: launcher.test.js
npm/test/: build.test.mjs
packaging/: entry.py  jarn.spec
scripts/: build-binary.sh  eval-badge.py  eval.py  record-demo.sh  swebench_modal.py
src/jarn/: __init__.py  __main__.py  bug_report.py  cli.py  completions.py  doctor_extensions.py  headless.py  repl.py  repl_renderer.py  uninstall.py  update_check.py  version.py
src/jarn/agent/: __init__.py  backends_factory.py  background.py  builder.py  builtin_tools.py  checkpoint.py  diagnostics.py  docker_backend.py  events.py  fanout.py  files.py  git_commands.py  interrupts.py  local_backend.py  (+12 more)
tests/: conftest.py  test_agent_mocked.py  test_async_subagents.py  test_background.py  test_checkpoint.py  test_checkpointer_async.py  test_ci.py  test_cli.py  test_compact.py  test_compat.py  test_completion.py  test_config.py  test_consistency.py  test_controller.py  test_cost.py  test_diagnostics.py  test_diff_render.py  test_doc_sync.py  test_docker_backend.py  test_docker_integration.py  test_doctor_extensions.py  test_error_classification.py  test_eval_harness.py  test_extensibility.py  test_fallback.py  test_fanout.py  test_git_commands.py  test_guard.py  test_harness_prompt_ab.py  test_headless.py  test_image_paste.py  test_keycommand.py  test_keyfix.py  test_local_backend.py  test_mcp.py  test_memory.py  test_memory_suggest.py  test_multimodal.py  test_oauth.py  test_observability.py  (+36 more)
web/: README.md  server_sketch.py
(+95 files in other folders)
