[project]
name = "jarn"
version = "0.4.4"
description = "J.A.R.N. — Just A Reliable Nerd. A TUI-first coding agent harness built on DeepAgents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Chayapat" }]
keywords = ["agent", "coding-agent", "tui", "deepagents", "llm", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "deepagents>=0.6.7",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-ollama>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-mistralai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
    "langchain-mcp-adapters>=0.1",
    "textual>=0.80",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "keyring>=25.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "ruamel-yaml>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
jarn = "jarn.cli:main"

[project.urls]
Homepage = "https://github.com/chayapats/jarn"
Repository = "https://github.com/chayapats/jarn"
Documentation = "https://github.com/chayapats/jarn/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarn"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/jarn",
    "/packaging",
    "/scripts",
    "/docs",
    "/examples",
    "/LICENSE",
    "/README.md",
    "/README-TH.md",
    "/SPEC.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/RELEASE.md",
    "/pyproject.toml",
    "/uv.lock",
]
exclude = [
    "/.jarn",
    "/.venv",
    "/dist",
    "/build",
    "/htmlcov",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.mypy_cache",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# eval fixtures are intentionally-broken/standalone seed projects; don't lint them.
extend-exclude = ["evals/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# UP042: `(str, Enum)` is a deliberate, widely-used pattern (clearer than StrEnum
# for our `.value`-based usage). E501: line length handled by formatter.
ignore = ["E501", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
# evals/fixtures hold intentionally-broken seed projects; never collect them.
norecursedirs = ["evals"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
